--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 <h2>TODOリスト</h2>
             </div>
             <div class="todo-input-area">
-                <input type="text" id="todoInput" placeholder="新しいTODOを入力...">
+                <input type="text" id="todoInput" placeholder="新しいTODOを入力..." autocomplete="off">
                 <button class="add-todo-btn" id="addTodoBtn">追加</button>
             </div>
             <div class="todo-list" id="todoList">
@@ -179,18 +179,18 @@
                 <h3 id="modalTitle">予定を追加</h3>
                 <button class="modal-close" id="closeScheduleModal">×</button>
             </div>
-            <form id="scheduleForm">
+            <form id="scheduleForm" autocomplete="off">
                 <div class="form-group">
                     <label for="scheduleTitle">タイトル *</label>
-                    <input type="text" id="scheduleTitle" required placeholder="予定のタイトル">
+                    <input type="text" id="scheduleTitle" required placeholder="予定のタイトル" autocomplete="off">
                 </div>
                 <div class="form-group">
                     <label for="scheduleDate">日付 *</label>
-                    <input type="date" id="scheduleDate" required>
+                    <input type="date" id="scheduleDate" required autocomplete="off">
                 </div>
                 <div class="form-group">
                     <label for="scheduleMemo">メモ</label>
-                    <textarea id="scheduleMemo" placeholder="メモ（任意）" rows="3"></textarea>
+                    <textarea id="scheduleMemo" placeholder="メモ（任意）" rows="3" autocomplete="off"></textarea>
                 </div>
                 <input type="hidden" id="scheduleId">
                 <div class="form-actions">
@@ -210,10 +210,10 @@
                 <h3 id="routineModalTitle">ルーティーンを追加</h3>
                 <button class="modal-close" id="closeRoutineModal">×</button>
             </div>
-            <form id="routineForm">
+            <form id="routineForm" autocomplete="off">
                 <div class="form-group">
                     <label for="routineTitle">タイトル *</label>
-                    <input type="text" id="routineTitle" required placeholder="ルーティーンのタイトル">
+                    <input type="text" id="routineTitle" required placeholder="ルーティーンのタイトル" autocomplete="off">
                 </div>
                 <div class="form-group">
                     <label for="routineFrequency">繰り返し *</label>
@@ -268,14 +268,14 @@
                 <h3 id="memoModalTitle">メモを追加</h3>
                 <button class="modal-close" id="closeMemoModal">×</button>
             </div>
-            <form id="memoForm">
+            <form id="memoForm" autocomplete="off">
                 <div class="form-group">
                     <label for="memoTitle">題名 *</label>
-                    <input type="text" id="memoTitle" required placeholder="メモの題名">
+                    <input type="text" id="memoTitle" required placeholder="メモの題名" autocomplete="off">
                 </div>
                 <div class="form-group">
                     <label for="memoContent">内容</label>
-                    <textarea id="memoContent" placeholder="メモの内容..." rows="10"></textarea>
+                    <textarea id="memoContent" placeholder="メモの内容..." rows="10" autocomplete="off"></textarea>
                 </div>
                 <input type="hidden" id="memoId">
                 <div class="form-actions">
