--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta name="theme-color" content="#0f0f0f">
+    <meta name="description" content="ログイン不要・完全無料の軽量Webリマインダー。締め切りを大きく見やすく表示し、TODOや予定を管理できます。PWA対応でスマホにインストール可能。">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <title>締め切り管理</title>
+    <title>締め切り管理が一目で分かる｜ログイン不要の軽量Webリマインダー</title>
+    <link rel="canonical" href="https://reminder-8b5.pages.dev/">
+    <meta property="og:title" content="締め切り管理が一目で分かるWebリマインダー">
+    <meta property="og:description" content="ログイン不要・軽量。締め切りを分かりやすく管理できる無料Webリマインダー。">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://reminder-8b5.pages.dev/">
     <link rel="manifest" href="manifest.json">
     <link rel="apple-touch-icon" href="icon-192.png">
     <link rel="stylesheet" href="styles.css">
