--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <span></span>
             <span></span>
         </button>
-        <h1 class="header-title" id="headerTitle">ダッシュボード</h1>
+        <h1 class="header-title" id="headerTitle">締め切り管理</h1>
         <div class="header-spacer"></div>
     </header>
 
@@ -91,8 +91,9 @@
             </div>
             
             <div class="empty-state" id="emptyState">
-                <p>予定がありません</p>
-                <p class="empty-hint">カレンダーから予定を追加してください</p>
+                <p class="empty-main">ログイン不要・軽量なWebリマインダーです。</p>
+                <p class="empty-sub">締め切りを大きく見やすく管理できます。</p>
+                <p class="empty-hint">📅 カレンダーから予定を追加してみましょう</p>
             </div>
             
             <!-- ダッシュボードのTODOセクション -->
