--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <title>締め切り管理が一目で分かる｜ログイン不要の軽量Webリマインダー</title>
     <link rel="canonical" href="https://reminder-8b5.pages.dev/">
+    <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "02a9b272f5984d9b89de605c63ab308a"}'></script><!-- End Cloudflare Web Analytics -->
     <meta property="og:title" content="締め切り管理が一目で分かるWebリマインダー">
     <meta property="og:description" content="ログイン不要・軽量。締め切りを分かりやすく管理できる無料Webリマインダー。">
     <meta property="og:type" content="website">
