--- a/index.html
+++ b/index.html
@@ -4,14 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta name="theme-color" content="#0f0f0f">
-    <link rel="icon" type="image/png" sizes="192x192" href="/icon-192.png">
-    <link rel="icon" type="image/png" sizes="512x512" href="/icon-512.png">
     <meta name="description" content="ログイン不要・完全無料の軽量Webリマインダー。締め切りを大きく見やすく表示し、TODOや予定を管理できます。PWA対応でスマホにインストール可能。">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <title>締め切り管理が一目で分かる｜ログイン不要の軽量Webリマインダー</title>
     <link rel="canonical" href="https://reminder-8b5.pages.dev/">
-    <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "02a9b272f5984d9b89de605c63ab308a"}'></script><!-- End Cloudflare Web Analytics -->
     <meta property="og:title" content="締め切り管理が一目で分かるWebリマインダー">
     <meta property="og:description" content="ログイン不要・軽量。締め切りを分かりやすく管理できる無料Webリマインダー。">
     <meta property="og:type" content="website">
@@ -193,6 +190,7 @@
                 <div class="setting-item">
                     <label for="overdueWeeks">期限切れを表示する期間</label>
                     <select id="overdueWeeks">
+                        <option value="0.43">3日間</option>
                         <option value="1">1週間</option>
                         <option value="2" selected>2週間</option>
                         <option value="3">3週間</option>
